# This file lists all IDL files in LibWeb
#
# Adding a new IDL file involves adding it to the corresponding list.
# Most IDL files are going to be "standard".
#

iterable_idl_files = [
  "//Libraries/LibWeb/Fetch/Headers.idl",
  "//Libraries/LibWeb/DOMURL/URLSearchParams.idl",
  "//Libraries/LibWeb/XHR/FormData.idl",
]

async_iterable_idl_files = [
  "//Libraries/LibWeb/Streams/ReadableStream.idl",
]

namespace_idl_files = [
  "//Libraries/LibWeb/CSS/CSS.idl",
  "//Libraries/LibWeb/WebAssembly/WebAssembly.idl",
]

global_idl_files = [
  "//Libraries/LibWeb/HTML/Window.idl",
  "//Libraries/LibWeb/HTML/DedicatedWorkerGlobalScope.idl",
  "//Libraries/LibWeb/HTML/ShadowRealmGlobalScope.idl",
  "//Libraries/LibWeb/HTML/SharedWorkerGlobalScope.idl",
  "//Libraries/LibWeb/ServiceWorker/ServiceWorkerGlobalScope.idl",
]

all_idl_files = [
  "//Libraries/LibWeb/Animations/Animation.idl",
  "//Libraries/LibWeb/Animations/AnimationEffect.idl",
  "//Libraries/LibWeb/Animations/AnimationPlaybackEvent.idl",
  "//Libraries/LibWeb/Animations/AnimationTimeline.idl",
  "//Libraries/LibWeb/Animations/DocumentTimeline.idl",
  "//Libraries/LibWeb/Animations/KeyframeEffect.idl",
  "//Libraries/LibWeb/Clipboard/Clipboard.idl",
  "//Libraries/LibWeb/Clipboard/ClipboardEvent.idl",
  "//Libraries/LibWeb/Clipboard/ClipboardItem.idl",
  "//Libraries/LibWeb/ContentSecurityPolicy/SecurityPolicyViolationEvent.idl",
  "//Libraries/LibWeb/Compression/CompressionStream.idl",
  "//Libraries/LibWeb/Compression/DecompressionStream.idl",
  "//Libraries/LibWeb/CookieStore/CookieChangeEvent.idl",
  "//Libraries/LibWeb/CookieStore/CookieStore.idl",
  "//Libraries/LibWeb/CredentialManagement/Credential.idl",
  "//Libraries/LibWeb/CredentialManagement/CredentialsContainer.idl",
  "//Libraries/LibWeb/CredentialManagement/FederatedCredential.idl",
  "//Libraries/LibWeb/CredentialManagement/PasswordCredential.idl",
  "//Libraries/LibWeb/Crypto/Crypto.idl",
  "//Libraries/LibWeb/Crypto/CryptoKey.idl",
  "//Libraries/LibWeb/Crypto/SubtleCrypto.idl",
  "//Libraries/LibWeb/CSS/AnimationEvent.idl",
  "//Libraries/LibWeb/CSS/CSSAnimation.idl",
  "//Libraries/LibWeb/CSS/CSSConditionRule.idl",
  "//Libraries/LibWeb/CSS/CSSCounterStyleRule.idl",
  "//Libraries/LibWeb/CSS/CSSFontFaceDescriptors.idl",
  "//Libraries/LibWeb/CSS/CSSFontFaceRule.idl",
  "//Libraries/LibWeb/CSS/CSSGroupingRule.idl",
  "//Libraries/LibWeb/CSS/CSSImageValue.idl",
  "//Libraries/LibWeb/CSS/CSSImportRule.idl",
  "//Libraries/LibWeb/CSS/CSSKeyframeRule.idl",
  "//Libraries/LibWeb/CSS/CSSKeyframesRule.idl",
  "//Libraries/LibWeb/CSS/CSSKeywordValue.idl",
  "//Libraries/LibWeb/CSS/CSSLayerBlockRule.idl",
  "//Libraries/LibWeb/CSS/CSSLayerStatementRule.idl",
  "//Libraries/LibWeb/CSS/CSSMarginRule.idl",
  "//Libraries/LibWeb/CSS/CSSMathClamp.idl",
  "//Libraries/LibWeb/CSS/CSSMathInvert.idl",
  "//Libraries/LibWeb/CSS/CSSMathMax.idl",
  "//Libraries/LibWeb/CSS/CSSMathMin.idl",
  "//Libraries/LibWeb/CSS/CSSMathNegate.idl",
  "//Libraries/LibWeb/CSS/CSSMathProduct.idl",
  "//Libraries/LibWeb/CSS/CSSMathSum.idl",
  "//Libraries/LibWeb/CSS/CSSMathValue.idl",
  "//Libraries/LibWeb/CSS/CSSMatrixComponent.idl",
  "//Libraries/LibWeb/CSS/CSSMediaRule.idl",
  "//Libraries/LibWeb/CSS/CSS.idl",
  "//Libraries/LibWeb/CSS/CSSNamespaceRule.idl",
  "//Libraries/LibWeb/CSS/CSSNestedDeclarations.idl",
  "//Libraries/LibWeb/CSS/CSSNumericArray.idl",
  "//Libraries/LibWeb/CSS/CSSNumericValue.idl",
  "//Libraries/LibWeb/CSS/CSSPageRule.idl",
  "//Libraries/LibWeb/CSS/CSSPageDescriptors.idl",
  "//Libraries/LibWeb/CSS/CSSPerspective.idl",
  "//Libraries/LibWeb/CSS/CSSPropertyRule.idl",
  "//Libraries/LibWeb/CSS/CSSRotate.idl",
  "//Libraries/LibWeb/CSS/CSSRule.idl",
  "//Libraries/LibWeb/CSS/CSSRuleList.idl",
  "//Libraries/LibWeb/CSS/CSSScale.idl",
  "//Libraries/LibWeb/CSS/CSSSkew.idl",
  "//Libraries/LibWeb/CSS/CSSSkewX.idl",
  "//Libraries/LibWeb/CSS/CSSSkewY.idl",
  "//Libraries/LibWeb/CSS/CSSStyleDeclaration.idl",
  "//Libraries/LibWeb/CSS/CSSStyleProperties.idl",
  "//Libraries/LibWeb/CSS/CSSStyleRule.idl",
  "//Libraries/LibWeb/CSS/CSSStyleSheet.idl",
  "//Libraries/LibWeb/CSS/CSSStyleValue.idl",
  "//Libraries/LibWeb/CSS/CSSSupportsRule.idl",
  "//Libraries/LibWeb/CSS/CSSTransformComponent.idl",
  "//Libraries/LibWeb/CSS/CSSTransformValue.idl",
  "//Libraries/LibWeb/CSS/CSSTransition.idl",
  "//Libraries/LibWeb/CSS/CSSTranslate.idl",
  "//Libraries/LibWeb/CSS/CSSUnitValue.idl",
  "//Libraries/LibWeb/CSS/CSSUnparsedValue.idl",
  "//Libraries/LibWeb/CSS/CSSVariableReferenceValue.idl",
  "//Libraries/LibWeb/CSS/FontFace.idl",
  "//Libraries/LibWeb/CSS/FontFaceSet.idl",
  "//Libraries/LibWeb/CSS/MediaList.idl",
  "//Libraries/LibWeb/CSS/MediaQueryList.idl",
  "//Libraries/LibWeb/CSS/MediaQueryListEvent.idl",
  "//Libraries/LibWeb/CSS/Screen.idl",
  "//Libraries/LibWeb/CSS/ScreenOrientation.idl",
  "//Libraries/LibWeb/CSS/StylePropertyMap.idl",
  "//Libraries/LibWeb/CSS/StylePropertyMapReadOnly.idl",
  "//Libraries/LibWeb/CSS/StyleSheet.idl",
  "//Libraries/LibWeb/CSS/StyleSheetList.idl",
  "//Libraries/LibWeb/CSS/TransitionEvent.idl",
  "//Libraries/LibWeb/CSS/VisualViewport.idl",
  "//Libraries/LibWeb/DOM/AbortController.idl",
  "//Libraries/LibWeb/DOM/AbortSignal.idl",
  "//Libraries/LibWeb/DOM/AbstractRange.idl",
  "//Libraries/LibWeb/DOM/Attr.idl",
  "//Libraries/LibWeb/DOM/CDATASection.idl",
  "//Libraries/LibWeb/DOM/CharacterData.idl",
  "//Libraries/LibWeb/DOM/Comment.idl",
  "//Libraries/LibWeb/DOM/CustomEvent.idl",
  "//Libraries/LibWeb/DOM/Document.idl",
  "//Libraries/LibWeb/DOM/DocumentFragment.idl",
  "//Libraries/LibWeb/DOM/DocumentType.idl",
  "//Libraries/LibWeb/DOM/DOMImplementation.idl",
  "//Libraries/LibWeb/DOM/DOMTokenList.idl",
  "//Libraries/LibWeb/DOM/Element.idl",
  "//Libraries/LibWeb/DOM/Event.idl",
  "//Libraries/LibWeb/DOM/EventTarget.idl",
  "//Libraries/LibWeb/DOM/HTMLCollection.idl",
  "//Libraries/LibWeb/DOM/MutationObserver.idl",
  "//Libraries/LibWeb/DOM/MutationRecord.idl",
  "//Libraries/LibWeb/DOM/NamedNodeMap.idl",
  "//Libraries/LibWeb/DOM/Node.idl",
  "//Libraries/LibWeb/DOM/NodeFilter.idl",
  "//Libraries/LibWeb/DOM/NodeIterator.idl",
  "//Libraries/LibWeb/DOM/NodeList.idl",
  "//Libraries/LibWeb/DOM/ProcessingInstruction.idl",
  "//Libraries/LibWeb/DOM/Range.idl",
  "//Libraries/LibWeb/DOM/ShadowRoot.idl",
  "//Libraries/LibWeb/DOM/StaticRange.idl",
  "//Libraries/LibWeb/DOM/Text.idl",
  "//Libraries/LibWeb/DOM/TreeWalker.idl",
  "//Libraries/LibWeb/DOM/XMLDocument.idl",
  "//Libraries/LibWeb/DOMURL/DOMURL.idl",
  "//Libraries/LibWeb/DOMURL/URLSearchParams.idl",
  "//Libraries/LibWeb/Encoding/TextDecoder.idl",
  "//Libraries/LibWeb/Encoding/TextEncoder.idl",
  "//Libraries/LibWeb/Encoding/TextEncoderStream.idl",
  "//Libraries/LibWeb/EncryptedMediaExtensions/MediaKeySystemAccess.idl",
  "//Libraries/LibWeb/EntriesAPI/FileSystemEntry.idl",
  "//Libraries/LibWeb/EventTiming/PerformanceEventTiming.idl",
  "//Libraries/LibWeb/Fetch/Headers.idl",
  "//Libraries/LibWeb/Fetch/Request.idl",
  "//Libraries/LibWeb/Fetch/Response.idl",
  "//Libraries/LibWeb/FileAPI/Blob.idl",
  "//Libraries/LibWeb/FileAPI/File.idl",
  "//Libraries/LibWeb/FileAPI/FileList.idl",
  "//Libraries/LibWeb/FileAPI/FileReader.idl",
  "//Libraries/LibWeb/FileAPI/FileReaderSync.idl",
  "//Libraries/LibWeb/Gamepad/Gamepad.idl",
  "//Libraries/LibWeb/Gamepad/GamepadButton.idl",
  "//Libraries/LibWeb/Gamepad/GamepadEvent.idl",
  "//Libraries/LibWeb/Gamepad/GamepadHapticActuator.idl",
  "//Libraries/LibWeb/Geolocation/Geolocation.idl",
  "//Libraries/LibWeb/Geolocation/GeolocationCoordinates.idl",
  "//Libraries/LibWeb/Geolocation/GeolocationPosition.idl",
  "//Libraries/LibWeb/Geolocation/GeolocationPositionError.idl",
  "//Libraries/LibWeb/Geometry/DOMMatrix.idl",
  "//Libraries/LibWeb/Geometry/DOMMatrixReadOnly.idl",
  "//Libraries/LibWeb/Geometry/DOMPoint.idl",
  "//Libraries/LibWeb/Geometry/DOMPointReadOnly.idl",
  "//Libraries/LibWeb/Geometry/DOMQuad.idl",
  "//Libraries/LibWeb/Geometry/DOMRect.idl",
  "//Libraries/LibWeb/Geometry/DOMRectList.idl",
  "//Libraries/LibWeb/Geometry/DOMRectReadOnly.idl",
  "//Libraries/LibWeb/HighResolutionTime/Performance.idl",
  "//Libraries/LibWeb/HTML/AudioTrack.idl",
  "//Libraries/LibWeb/HTML/AudioTrackList.idl",
  "//Libraries/LibWeb/HTML/BarProp.idl",
  "//Libraries/LibWeb/HTML/BeforeUnloadEvent.idl",
  "//Libraries/LibWeb/HTML/BroadcastChannel.idl",
  "//Libraries/LibWeb/HTML/CanvasGradient.idl",
  "//Libraries/LibWeb/HTML/CanvasPattern.idl",
  "//Libraries/LibWeb/HTML/CanvasRenderingContext2D.idl",
  "//Libraries/LibWeb/HTML/CloseEvent.idl",
  "//Libraries/LibWeb/HTML/CloseWatcher.idl",
  "//Libraries/LibWeb/HTML/CommandEvent.idl",
  "//Libraries/LibWeb/HTML/CustomElements/CustomElementRegistry.idl",
  "//Libraries/LibWeb/HTML/CustomElements/CustomStateSet.idl",
  "//Libraries/LibWeb/HTML/DataTransfer.idl",
  "//Libraries/LibWeb/HTML/DataTransferItem.idl",
  "//Libraries/LibWeb/HTML/DataTransferItemList.idl",
  "//Libraries/LibWeb/HTML/DedicatedWorkerGlobalScope.idl",
  "//Libraries/LibWeb/HTML/DOMParser.idl",
  "//Libraries/LibWeb/HTML/DOMStringList.idl",
  "//Libraries/LibWeb/HTML/DOMStringMap.idl",
  "//Libraries/LibWeb/HTML/DragEvent.idl",
  "//Libraries/LibWeb/HTML/ElementInternals.idl",
  "//Libraries/LibWeb/HTML/ErrorEvent.idl",
  "//Libraries/LibWeb/HTML/EventSource.idl",
  "//Libraries/LibWeb/HTML/FormDataEvent.idl",
  "//Libraries/LibWeb/HTML/HashChangeEvent.idl",
  "//Libraries/LibWeb/HTML/History.idl",
  "//Libraries/LibWeb/HTML/HTMLAllCollection.idl",
  "//Libraries/LibWeb/HTML/HTMLAnchorElement.idl",
  "//Libraries/LibWeb/HTML/HTMLAreaElement.idl",
  "//Libraries/LibWeb/HTML/HTMLAudioElement.idl",
  "//Libraries/LibWeb/HTML/HTMLBaseElement.idl",
  "//Libraries/LibWeb/HTML/HTMLBodyElement.idl",
  "//Libraries/LibWeb/HTML/HTMLBRElement.idl",
  "//Libraries/LibWeb/HTML/HTMLButtonElement.idl",
  "//Libraries/LibWeb/HTML/HTMLCanvasElement.idl",
  "//Libraries/LibWeb/HTML/HTMLDataElement.idl",
  "//Libraries/LibWeb/HTML/HTMLDataListElement.idl",
  "//Libraries/LibWeb/HTML/HTMLDetailsElement.idl",
  "//Libraries/LibWeb/HTML/HTMLDialogElement.idl",
  "//Libraries/LibWeb/HTML/HTMLDirectoryElement.idl",
  "//Libraries/LibWeb/HTML/HTMLDivElement.idl",
  "//Libraries/LibWeb/HTML/HTMLDListElement.idl",
  "//Libraries/LibWeb/HTML/HTMLDocument.idl",
  "//Libraries/LibWeb/HTML/HTMLElement.idl",
  "//Libraries/LibWeb/HTML/HTMLEmbedElement.idl",
  "//Libraries/LibWeb/HTML/HTMLFieldSetElement.idl",
  "//Libraries/LibWeb/HTML/HTMLFontElement.idl",
  "//Libraries/LibWeb/HTML/HTMLFormControlsCollection.idl",
  "//Libraries/LibWeb/HTML/HTMLFormElement.idl",
  "//Libraries/LibWeb/HTML/HTMLFrameElement.idl",
  "//Libraries/LibWeb/HTML/HTMLFrameSetElement.idl",
  "//Libraries/LibWeb/HTML/HTMLHeadElement.idl",
  "//Libraries/LibWeb/HTML/HTMLHeadingElement.idl",
  "//Libraries/LibWeb/HTML/HTMLHRElement.idl",
  "//Libraries/LibWeb/HTML/HTMLHtmlElement.idl",
  "//Libraries/LibWeb/HTML/HTMLIFrameElement.idl",
  "//Libraries/LibWeb/HTML/HTMLImageElement.idl",
  "//Libraries/LibWeb/HTML/HTMLInputElement.idl",
  "//Libraries/LibWeb/HTML/HTMLLabelElement.idl",
  "//Libraries/LibWeb/HTML/HTMLLegendElement.idl",
  "//Libraries/LibWeb/HTML/HTMLLIElement.idl",
  "//Libraries/LibWeb/HTML/HTMLLinkElement.idl",
  "//Libraries/LibWeb/HTML/HTMLMapElement.idl",
  "//Libraries/LibWeb/HTML/HTMLMarqueeElement.idl",
  "//Libraries/LibWeb/HTML/HTMLMediaElement.idl",
  "//Libraries/LibWeb/HTML/HTMLMenuElement.idl",
  "//Libraries/LibWeb/HTML/HTMLMetaElement.idl",
  "//Libraries/LibWeb/HTML/HTMLMeterElement.idl",
  "//Libraries/LibWeb/HTML/HTMLModElement.idl",
  "//Libraries/LibWeb/HTML/HTMLObjectElement.idl",
  "//Libraries/LibWeb/HTML/HTMLOListElement.idl",
  "//Libraries/LibWeb/HTML/HTMLOptGroupElement.idl",
  "//Libraries/LibWeb/HTML/HTMLOptionElement.idl",
  "//Libraries/LibWeb/HTML/HTMLOptionsCollection.idl",
  "//Libraries/LibWeb/HTML/HTMLOutputElement.idl",
  "//Libraries/LibWeb/HTML/HTMLParagraphElement.idl",
  "//Libraries/LibWeb/HTML/HTMLParamElement.idl",
  "//Libraries/LibWeb/HTML/HTMLPictureElement.idl",
  "//Libraries/LibWeb/HTML/HTMLPreElement.idl",
  "//Libraries/LibWeb/HTML/HTMLProgressElement.idl",
  "//Libraries/LibWeb/HTML/HTMLQuoteElement.idl",
  "//Libraries/LibWeb/HTML/HTMLScriptElement.idl",
  "//Libraries/LibWeb/HTML/HTMLSelectElement.idl",
  "//Libraries/LibWeb/HTML/HTMLSlotElement.idl",
  "//Libraries/LibWeb/HTML/HTMLSourceElement.idl",
  "//Libraries/LibWeb/HTML/HTMLSpanElement.idl",
  "//Libraries/LibWeb/HTML/HTMLStyleElement.idl",
  "//Libraries/LibWeb/HTML/HTMLTableCaptionElement.idl",
  "//Libraries/LibWeb/HTML/HTMLTableCellElement.idl",
  "//Libraries/LibWeb/HTML/HTMLTableColElement.idl",
  "//Libraries/LibWeb/HTML/HTMLTableElement.idl",
  "//Libraries/LibWeb/HTML/HTMLTableRowElement.idl",
  "//Libraries/LibWeb/HTML/HTMLTableSectionElement.idl",
  "//Libraries/LibWeb/HTML/HTMLTemplateElement.idl",
  "//Libraries/LibWeb/HTML/HTMLTextAreaElement.idl",
  "//Libraries/LibWeb/HTML/HTMLTimeElement.idl",
  "//Libraries/LibWeb/HTML/HTMLTitleElement.idl",
  "//Libraries/LibWeb/HTML/HTMLTrackElement.idl",
  "//Libraries/LibWeb/HTML/HTMLUListElement.idl",
  "//Libraries/LibWeb/HTML/HTMLUnknownElement.idl",
  "//Libraries/LibWeb/HTML/HTMLVideoElement.idl",
  "//Libraries/LibWeb/HTML/ImageBitmap.idl",
  "//Libraries/LibWeb/HTML/ImageData.idl",
  "//Libraries/LibWeb/HTML/Location.idl",
  "//Libraries/LibWeb/HTML/MediaError.idl",
  "//Libraries/LibWeb/HTML/MessageChannel.idl",
  "//Libraries/LibWeb/HTML/MessageEvent.idl",
  "//Libraries/LibWeb/HTML/MessagePort.idl",
  "//Libraries/LibWeb/HTML/MimeType.idl",
  "//Libraries/LibWeb/HTML/MimeTypeArray.idl",
  "//Libraries/LibWeb/HTML/NavigateEvent.idl",
  "//Libraries/LibWeb/HTML/Navigation.idl",
  "//Libraries/LibWeb/HTML/NavigationCurrentEntryChangeEvent.idl",
  "//Libraries/LibWeb/HTML/NavigationDestination.idl",
  "//Libraries/LibWeb/HTML/NavigationHistoryEntry.idl",
  "//Libraries/LibWeb/HTML/NavigationTransition.idl",
  "//Libraries/LibWeb/HTML/Navigator.idl",
  "//Libraries/LibWeb/HTML/OffscreenCanvas.idl",
  "//Libraries/LibWeb/HTML/OffscreenCanvasRenderingContext2D.idl",
  "//Libraries/LibWeb/HTML/PageTransitionEvent.idl",
  "//Libraries/LibWeb/HTML/Path2D.idl",
  "//Libraries/LibWeb/HTML/Plugin.idl",
  "//Libraries/LibWeb/HTML/PluginArray.idl",
  "//Libraries/LibWeb/HTML/PopStateEvent.idl",
  "//Libraries/LibWeb/HTML/PromiseRejectionEvent.idl",
  "//Libraries/LibWeb/HTML/RadioNodeList.idl",
  "//Libraries/LibWeb/HTML/ShadowRealmGlobalScope.idl",
  "//Libraries/LibWeb/HTML/SharedWorker.idl",
  "//Libraries/LibWeb/HTML/SharedWorkerGlobalScope.idl",
  "//Libraries/LibWeb/HTML/Storage.idl",
  "//Libraries/LibWeb/HTML/StorageEvent.idl",
  "//Libraries/LibWeb/HTML/SubmitEvent.idl",
  "//Libraries/LibWeb/HTML/TextMetrics.idl",
  "//Libraries/LibWeb/HTML/TextTrack.idl",
  "//Libraries/LibWeb/HTML/TextTrackCue.idl",
  "//Libraries/LibWeb/HTML/TextTrackCueList.idl",
  "//Libraries/LibWeb/HTML/TextTrackList.idl",
  "//Libraries/LibWeb/HTML/TimeRanges.idl",
  "//Libraries/LibWeb/HTML/ToggleEvent.idl",
  "//Libraries/LibWeb/HTML/TrackEvent.idl",
  "//Libraries/LibWeb/HTML/UserActivation.idl",
  "//Libraries/LibWeb/HTML/ValidityState.idl",
  "//Libraries/LibWeb/HTML/VideoTrack.idl",
  "//Libraries/LibWeb/HTML/VideoTrackList.idl",
  "//Libraries/LibWeb/HTML/Window.idl",
  "//Libraries/LibWeb/HTML/Worker.idl",
  "//Libraries/LibWeb/HTML/WorkerGlobalScope.idl",
  "//Libraries/LibWeb/HTML/WorkerLocation.idl",
  "//Libraries/LibWeb/HTML/WorkerNavigator.idl",
  "//Libraries/LibWeb/HTML/WorkletGlobalScope.idl",
  "//Libraries/LibWeb/HTML/XMLSerializer.idl",
  "//Libraries/LibWeb/IndexedDB/IDBCursor.idl",
  "//Libraries/LibWeb/IndexedDB/IDBCursorWithValue.idl",
  "//Libraries/LibWeb/IndexedDB/IDBDatabase.idl",
  "//Libraries/LibWeb/IndexedDB/IDBFactory.idl",
  "//Libraries/LibWeb/IndexedDB/IDBIndex.idl",
  "//Libraries/LibWeb/IndexedDB/IDBKeyRange.idl",
  "//Libraries/LibWeb/IndexedDB/IDBObjectStore.idl",
  "//Libraries/LibWeb/IndexedDB/IDBOpenDBRequest.idl",
  "//Libraries/LibWeb/IndexedDB/IDBRecord.idl",
  "//Libraries/LibWeb/IndexedDB/IDBRequest.idl",
  "//Libraries/LibWeb/IndexedDB/IDBTransaction.idl",
  "//Libraries/LibWeb/IndexedDB/IDBVersionChangeEvent.idl",
  "//Libraries/LibWeb/Internals/InternalAnimationTimeline.idl",
  "//Libraries/LibWeb/Internals/InternalGamepad.idl",
  "//Libraries/LibWeb/Internals/Internals.idl",
  "//Libraries/LibWeb/Internals/WebUI.idl",
  "//Libraries/LibWeb/IntersectionObserver/IntersectionObserver.idl",
  "//Libraries/LibWeb/IntersectionObserver/IntersectionObserverEntry.idl",
  "//Libraries/LibWeb/MathML/MathMLElement.idl",
  "//Libraries/LibWeb/MediaCapabilitiesAPI/MediaCapabilities.idl",
  "//Libraries/LibWeb/MediaSourceExtensions/BufferedChangeEvent.idl",
  "//Libraries/LibWeb/MediaSourceExtensions/ManagedMediaSource.idl",
  "//Libraries/LibWeb/MediaSourceExtensions/ManagedSourceBuffer.idl",
  "//Libraries/LibWeb/MediaSourceExtensions/MediaSource.idl",
  "//Libraries/LibWeb/MediaSourceExtensions/MediaSourceHandle.idl",
  "//Libraries/LibWeb/MediaSourceExtensions/SourceBuffer.idl",
  "//Libraries/LibWeb/MediaSourceExtensions/SourceBufferList.idl",
  "//Libraries/LibWeb/NavigationTiming/PerformanceTiming.idl",
  "//Libraries/LibWeb/NavigationTiming/PerformanceNavigation.idl",
  "//Libraries/LibWeb/NotificationsAPI/Notification.idl",
  "//Libraries/LibWeb/PerformanceTimeline/PerformanceEntry.idl",
  "//Libraries/LibWeb/PerformanceTimeline/PerformanceObserver.idl",
  "//Libraries/LibWeb/PerformanceTimeline/PerformanceObserverEntryList.idl",
  "//Libraries/LibWeb/RequestIdleCallback/IdleDeadline.idl",
  "//Libraries/LibWeb/ResizeObserver/ResizeObserver.idl",
  "//Libraries/LibWeb/ResizeObserver/ResizeObserverEntry.idl",
  "//Libraries/LibWeb/ResizeObserver/ResizeObserverSize.idl",
  "//Libraries/LibWeb/ResourceTiming/PerformanceResourceTiming.idl",
  "//Libraries/LibWeb/Selection/Selection.idl",
  "//Libraries/LibWeb/Serial/Serial.idl",
  "//Libraries/LibWeb/Serial/SerialPort.idl",
  "//Libraries/LibWeb/ServiceWorker/CacheStorage.idl",
  "//Libraries/LibWeb/ServiceWorker/ServiceWorker.idl",
  "//Libraries/LibWeb/ServiceWorker/ServiceWorkerContainer.idl",
  "//Libraries/LibWeb/ServiceWorker/ServiceWorkerGlobalScope.idl",
  "//Libraries/LibWeb/ServiceWorker/ServiceWorkerRegistration.idl",
  "//Libraries/LibWeb/StorageAPI/StorageManager.idl",
  "//Libraries/LibWeb/Streams/ByteLengthQueuingStrategy.idl",
  "//Libraries/LibWeb/Streams/CountQueuingStrategy.idl",
  "//Libraries/LibWeb/Streams/ReadableByteStreamController.idl",
  "//Libraries/LibWeb/Streams/ReadableStream.idl",
  "//Libraries/LibWeb/Streams/ReadableStreamBYOBReader.idl",
  "//Libraries/LibWeb/Streams/ReadableStreamBYOBRequest.idl",
  "//Libraries/LibWeb/Streams/ReadableStreamDefaultController.idl",
  "//Libraries/LibWeb/Streams/ReadableStreamDefaultReader.idl",
  "//Libraries/LibWeb/Streams/TransformStream.idl",
  "//Libraries/LibWeb/Streams/TransformStreamDefaultController.idl",
  "//Libraries/LibWeb/Streams/WritableStream.idl",
  "//Libraries/LibWeb/Streams/WritableStreamDefaultController.idl",
  "//Libraries/LibWeb/Streams/WritableStreamDefaultWriter.idl",
  "//Libraries/LibWeb/TrustedTypes/TrustedHTML.idl",
  "//Libraries/LibWeb/TrustedTypes/TrustedScript.idl",
  "//Libraries/LibWeb/TrustedTypes/TrustedScriptURL.idl",
  "//Libraries/LibWeb/TrustedTypes/TrustedTypePolicy.idl",
  "//Libraries/LibWeb/TrustedTypes/TrustedTypePolicyFactory.idl",
  "//Libraries/LibWeb/SVG/SVGAElement.idl",
  "//Libraries/LibWeb/SVG/SVGAnimatedEnumeration.idl",
  "//Libraries/LibWeb/SVG/SVGAnimatedLength.idl",
  "//Libraries/LibWeb/SVG/SVGAnimatedLengthList.idl",
  "//Libraries/LibWeb/SVG/SVGAnimatedNumber.idl",
  "//Libraries/LibWeb/SVG/SVGAnimatedNumberList.idl",
  "//Libraries/LibWeb/SVG/SVGAnimatedRect.idl",
  "//Libraries/LibWeb/SVG/SVGAnimatedString.idl",
  "//Libraries/LibWeb/SVG/SVGAnimatedTransformList.idl",
  "//Libraries/LibWeb/SVG/SVGAnimationElement.idl",
  "//Libraries/LibWeb/SVG/SVGCircleElement.idl",
  "//Libraries/LibWeb/SVG/SVGClipPathElement.idl",
  "//Libraries/LibWeb/SVG/SVGComponentTransferFunctionElement.idl",
  "//Libraries/LibWeb/SVG/SVGDefsElement.idl",
  "//Libraries/LibWeb/SVG/SVGDescElement.idl",
  "//Libraries/LibWeb/SVG/SVGElement.idl",
  "//Libraries/LibWeb/SVG/SVGEllipseElement.idl",
  "//Libraries/LibWeb/SVG/SVGFilterElement.idl",
  "//Libraries/LibWeb/SVG/SVGForeignObjectElement.idl",
  "//Libraries/LibWeb/SVG/SVGGElement.idl",
  "//Libraries/LibWeb/SVG/SVGGeometryElement.idl",
  "//Libraries/LibWeb/SVG/SVGGradientElement.idl",
  "//Libraries/LibWeb/SVG/SVGGraphicsElement.idl",
  "//Libraries/LibWeb/SVG/SVGImageElement.idl",
  "//Libraries/LibWeb/SVG/SVGFEBlendElement.idl",
  "//Libraries/LibWeb/SVG/SVGFEColorMatrixElement.idl",
  "//Libraries/LibWeb/SVG/SVGFEComponentTransferElement.idl",
  "//Libraries/LibWeb/SVG/SVGFECompositeElement.idl",
  "//Libraries/LibWeb/SVG/SVGFEFloodElement.idl",
  "//Libraries/LibWeb/SVG/SVGFEFuncAElement.idl",
  "//Libraries/LibWeb/SVG/SVGFEFuncBElement.idl",
  "//Libraries/LibWeb/SVG/SVGFEFuncGElement.idl",
  "//Libraries/LibWeb/SVG/SVGFEFuncRElement.idl",
  "//Libraries/LibWeb/SVG/SVGFEGaussianBlurElement.idl",
  "//Libraries/LibWeb/SVG/SVGFEImageElement.idl",
  "//Libraries/LibWeb/SVG/SVGFEMergeElement.idl",
  "//Libraries/LibWeb/SVG/SVGFEMergeNodeElement.idl",
  "//Libraries/LibWeb/SVG/SVGFEMorphologyElement.idl",
  "//Libraries/LibWeb/SVG/SVGFEOffsetElement.idl",
  "//Libraries/LibWeb/SVG/SVGLength.idl",
  "//Libraries/LibWeb/SVG/SVGLengthList.idl",
  "//Libraries/LibWeb/SVG/SVGLinearGradientElement.idl",
  "//Libraries/LibWeb/SVG/SVGLineElement.idl",
  "//Libraries/LibWeb/SVG/SVGMaskElement.idl",
  "//Libraries/LibWeb/SVG/SVGMetadataElement.idl",
  "//Libraries/LibWeb/SVG/SVGNumber.idl",
  "//Libraries/LibWeb/SVG/SVGNumberList.idl",
  "//Libraries/LibWeb/SVG/SVGPathElement.idl",
  "//Libraries/LibWeb/SVG/SVGPolygonElement.idl",
  "//Libraries/LibWeb/SVG/SVGPolylineElement.idl",
  "//Libraries/LibWeb/SVG/SVGRadialGradientElement.idl",
  "//Libraries/LibWeb/SVG/SVGRectElement.idl",
  "//Libraries/LibWeb/SVG/SVGScriptElement.idl",
  "//Libraries/LibWeb/SVG/SVGStopElement.idl",
  "//Libraries/LibWeb/SVG/SVGStyleElement.idl",
  "//Libraries/LibWeb/SVG/SVGSVGElement.idl",
  "//Libraries/LibWeb/SVG/SVGSymbolElement.idl",
  "//Libraries/LibWeb/SVG/SVGTextContentElement.idl",
  "//Libraries/LibWeb/SVG/SVGTextElement.idl",
  "//Libraries/LibWeb/SVG/SVGTextPathElement.idl",
  "//Libraries/LibWeb/SVG/SVGTextPositioningElement.idl",
  "//Libraries/LibWeb/SVG/SVGTitleElement.idl",
  "//Libraries/LibWeb/SVG/SVGTransform.idl",
  "//Libraries/LibWeb/SVG/SVGTransformList.idl",
  "//Libraries/LibWeb/SVG/SVGTSpanElement.idl",
  "//Libraries/LibWeb/SVG/SVGUnitTypes.idl",
  "//Libraries/LibWeb/SVG/SVGUseElement.idl",
  "//Libraries/LibWeb/SVG/SVGViewElement.idl",
  "//Libraries/LibWeb/UIEvents/CompositionEvent.idl",
  "//Libraries/LibWeb/UIEvents/FocusEvent.idl",
  "//Libraries/LibWeb/UIEvents/InputEvent.idl",
  "//Libraries/LibWeb/UIEvents/KeyboardEvent.idl",
  "//Libraries/LibWeb/UIEvents/MouseEvent.idl",
  "//Libraries/LibWeb/UIEvents/PointerEvent.idl",
  "//Libraries/LibWeb/UIEvents/TextEvent.idl",
  "//Libraries/LibWeb/UIEvents/UIEvent.idl",
  "//Libraries/LibWeb/UIEvents/WheelEvent.idl",
  "//Libraries/LibWeb/URLPattern/URLPattern.idl",
  "//Libraries/LibWeb/UserTiming/PerformanceMark.idl",
  "//Libraries/LibWeb/UserTiming/PerformanceMeasure.idl",
  "//Libraries/LibWeb/ViewTransition/ViewTransition.idl",
  "//Libraries/LibWeb/WebAssembly/Global.idl",
  "//Libraries/LibWeb/WebAssembly/Instance.idl",
  "//Libraries/LibWeb/WebAssembly/Memory.idl",
  "//Libraries/LibWeb/WebAssembly/Module.idl",
  "//Libraries/LibWeb/WebAssembly/Table.idl",
  "//Libraries/LibWeb/WebAssembly/WebAssembly.idl",
  "//Libraries/LibWeb/WebAudio/AnalyserNode.idl",
  "//Libraries/LibWeb/WebAudio/AudioBuffer.idl",
  "//Libraries/LibWeb/WebAudio/AudioBufferSourceNode.idl",
  "//Libraries/LibWeb/WebAudio/AudioContext.idl",
  "//Libraries/LibWeb/WebAudio/AudioDestinationNode.idl",
  "//Libraries/LibWeb/WebAudio/AudioListener.idl",
  "//Libraries/LibWeb/WebAudio/AudioNode.idl",
  "//Libraries/LibWeb/WebAudio/AudioParam.idl",
  "//Libraries/LibWeb/WebAudio/AudioScheduledSourceNode.idl",
  "//Libraries/LibWeb/WebAudio/BaseAudioContext.idl",
  "//Libraries/LibWeb/WebAudio/BiquadFilterNode.idl",
  "//Libraries/LibWeb/WebAudio/DynamicsCompressorNode.idl",
  "//Libraries/LibWeb/WebAudio/GainNode.idl",
  "//Libraries/LibWeb/WebAudio/ChannelMergerNode.idl",
  "//Libraries/LibWeb/WebAudio/ChannelSplitterNode.idl",
  "//Libraries/LibWeb/WebAudio/ConstantSourceNode.idl",
  "//Libraries/LibWeb/WebAudio/DelayNode.idl",
  "//Libraries/LibWeb/WebAudio/MediaElementAudioSourceNode.idl",
  "//Libraries/LibWeb/WebAudio/OfflineAudioCompletionEvent.idl",
  "//Libraries/LibWeb/WebAudio/OfflineAudioContext.idl",
  "//Libraries/LibWeb/WebAudio/OscillatorNode.idl",
  "//Libraries/LibWeb/WebAudio/PannerNode.idl",
  "//Libraries/LibWeb/WebAudio/PeriodicWave.idl",
  "//Libraries/LibWeb/WebAudio/ScriptProcessorNode.idl",
  "//Libraries/LibWeb/WebAudio/StereoPannerNode.idl",
  "//Libraries/LibWeb/WebGL/Extensions/ANGLEInstancedArrays.idl",
  "//Libraries/LibWeb/WebGL/Extensions/EXTBlendMinMax.idl",
  "//Libraries/LibWeb/WebGL/Extensions/EXTColorBufferFloat.idl",
  "//Libraries/LibWeb/WebGL/Extensions/EXTRenderSnorm.idl",
  "//Libraries/LibWeb/WebGL/Extensions/EXTTextureFilterAnisotropic.idl",
  "//Libraries/LibWeb/WebGL/Extensions/EXTTextureNorm16.idl",
  "//Libraries/LibWeb/WebGL/Extensions/OESStandardDerivatives.idl",
  "//Libraries/LibWeb/WebGL/Extensions/OESVertexArrayObject.idl",
  "//Libraries/LibWeb/WebGL/Extensions/WebGLCompressedTextureS3tc.idl",
  "//Libraries/LibWeb/WebGL/Extensions/WebGLCompressedTextureS3tcSrgb.idl",
  "//Libraries/LibWeb/WebGL/Extensions/WebGLDrawBuffers.idl",
  "//Libraries/LibWeb/WebGL/Extensions/WebGLVertexArrayObjectOES.idl",
  "//Libraries/LibWeb/WebGL/WebGL2RenderingContext.idl",
  "//Libraries/LibWeb/WebGL/WebGLActiveInfo.idl",
  "//Libraries/LibWeb/WebGL/WebGLBuffer.idl",
  "//Libraries/LibWeb/WebGL/WebGLContextEvent.idl",
  "//Libraries/LibWeb/WebGL/WebGLFramebuffer.idl",
  "//Libraries/LibWeb/WebGL/WebGLObject.idl",
  "//Libraries/LibWeb/WebGL/WebGLProgram.idl",
  "//Libraries/LibWeb/WebGL/WebGLQuery.idl",
  "//Libraries/LibWeb/WebGL/WebGLRenderbuffer.idl",
  "//Libraries/LibWeb/WebGL/WebGLRenderingContext.idl",
  "//Libraries/LibWeb/WebGL/WebGLSampler.idl",
  "//Libraries/LibWeb/WebGL/WebGLShader.idl",
  "//Libraries/LibWeb/WebGL/WebGLShaderPrecisionFormat.idl",
  "//Libraries/LibWeb/WebGL/WebGLSync.idl",
  "//Libraries/LibWeb/WebGL/WebGLTexture.idl",
  "//Libraries/LibWeb/WebGL/WebGLTransformFeedback.idl",
  "//Libraries/LibWeb/WebGL/WebGLUniformLocation.idl",
  "//Libraries/LibWeb/WebGL/WebGLVertexArrayObject.idl",
  "//Libraries/LibWeb/WebIDL/DOMException.idl",
  "//Libraries/LibWeb/WebSockets/WebSocket.idl",
  "//Libraries/LibWeb/WebVTT/VTTCue.idl",
  "//Libraries/LibWeb/WebVTT/VTTRegion.idl",
  "//Libraries/LibWeb/XHR/FormData.idl",
  "//Libraries/LibWeb/XHR/ProgressEvent.idl",
  "//Libraries/LibWeb/XHR/XMLHttpRequest.idl",
  "//Libraries/LibWeb/XHR/XMLHttpRequestEventTarget.idl",
  "//Libraries/LibWeb/XHR/XMLHttpRequestUpload.idl",
  "//Libraries/LibWeb/XPath/XPathResult.idl",
  "//Libraries/LibWeb/XPath/XPathExpression.idl",
  "//Libraries/LibWeb/XPath/XPathEvaluator.idl",
]

# Standard idl files are neither iterable, namespaces, or global
standard_idl_files = all_idl_files
standard_idl_files -= iterable_idl_files
standard_idl_files -= async_iterable_idl_files
standard_idl_files -= namespace_idl_files
standard_idl_files -= global_idl_files
