shared_library("LibWebSocket") {
  output_name = "websocket"
  include_dirs = [ "//Libraries" ]
  deps = [
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibCrypto",
    "//Libraries/LibDNS",
    "//Libraries/LibHTTP",
    "//Libraries/LibTLS",
    "//Libraries/LibURL",
  ]
  sources = [
    "ConnectionInfo.cpp",
    "Impl/WebSocketImpl.cpp",
    "Impl/WebSocketImplSerenity.cpp",
    "WebSocket.cpp",
  ]
}
