import("//Meta/gn/build/compiled_action.gni")
import("//Meta/gn/build/embed_as_string.gni")
import("//Meta/gn/build/lagom_library.gni")

compiled_action("WebContentClientEndpoint") {
  tool = "//Meta/Lagom/Tools/CodeGenerators/IPCCompiler"
  inputs = [ "//Services/WebContent/WebContentClient.ipc" ]
  outputs = [ "$root_gen_dir/WebContent/WebContentClientEndpoint.h" ]
  args = [
    rebase_path(inputs[0], root_build_dir),
    "-o",
    rebase_path(outputs[0], root_build_dir),
  ]
}

compiled_action("WebContentServerEndpoint") {
  tool = "//Meta/Lagom/Tools/CodeGenerators/IPCCompiler"
  inputs = [ "//Services/WebContent/WebContentServer.ipc" ]
  outputs = [ "$root_gen_dir/WebContent/WebContentServerEndpoint.h" ]
  args = [
    rebase_path(inputs[0], root_build_dir),
    "-o",
    rebase_path(outputs[0], root_build_dir),
  ]
}

compiled_action("WebDriverClientEndpoint") {
  tool = "//Meta/Lagom/Tools/CodeGenerators/IPCCompiler"
  inputs = [ "//Services/WebContent/WebDriverClient.ipc" ]
  outputs = [ "$root_gen_dir/WebContent/WebDriverClientEndpoint.h" ]
  args = [
    rebase_path(inputs[0], root_build_dir),
    "-o",
    rebase_path(outputs[0], root_build_dir),
  ]
}

compiled_action("WebDriverServerEndpoint") {
  tool = "//Meta/Lagom/Tools/CodeGenerators/IPCCompiler"
  inputs = [ "//Services/WebContent/WebDriverServer.ipc" ]
  outputs = [ "$root_gen_dir/WebContent/WebDriverServerEndpoint.h" ]
  args = [
    rebase_path(inputs[0], root_build_dir),
    "-o",
    rebase_path(outputs[0], root_build_dir),
  ]
}

compiled_action("WebUIClientEndpoint") {
  tool = "//Meta/Lagom/Tools/CodeGenerators/IPCCompiler"
  inputs = [ "//Services/WebContent/WebUIClient.ipc" ]
  outputs = [ "$root_gen_dir/WebContent/WebUIClientEndpoint.h" ]
  args = [
    rebase_path(inputs[0], root_build_dir),
    "-o",
    rebase_path(outputs[0], root_build_dir),
  ]
}

compiled_action("WebUIServerEndpoint") {
  tool = "//Meta/Lagom/Tools/CodeGenerators/IPCCompiler"
  inputs = [ "//Services/WebContent/WebUIServer.ipc" ]
  outputs = [ "$root_gen_dir/WebContent/WebUIServerEndpoint.h" ]
  args = [
    rebase_path(inputs[0], root_build_dir),
    "-o",
    rebase_path(outputs[0], root_build_dir),
  ]
}

compiled_action("UIProcessClientEndpoint") {
  tool = "//Meta/Lagom/Tools/CodeGenerators/IPCCompiler"
  inputs = [ "//Libraries/LibWebView/UIProcessClient.ipc" ]
  outputs = [ "$root_gen_dir/LibWebView/UIProcessClientEndpoint.h" ]
  args = [
    rebase_path(inputs[0], root_build_dir),
    "-o",
    rebase_path(outputs[0], root_build_dir),
  ]
}

compiled_action("UIProcessServerEndpoint") {
  tool = "//Meta/Lagom/Tools/CodeGenerators/IPCCompiler"
  inputs = [ "//Libraries/LibWebView/UIProcessServer.ipc" ]
  outputs = [ "$root_gen_dir/LibWebView/UIProcessServerEndpoint.h" ]
  args = [
    rebase_path(inputs[0], root_build_dir),
    "-o",
    rebase_path(outputs[0], root_build_dir),
  ]
}

embed_as_string("generate_native_stylesheet_source") {
  input = "Native.css"
  output = "$target_gen_dir/NativeStyleSheetSource.cpp"
  variable_name = "native_stylesheet_source"
  namespace = "WebView"
}

config("configs") {
  include_dirs = [
    "//Libraries",
    "//Services",
    "//",
    "$target_gen_dir/..",
  ]
  configs = [ "//AK:ak_headers" ]
}

lagom_library("LibWebView") {
  output_name = "webview"
  public_configs = [ ":configs" ]
  deps = [
    ":UIProcessClientEndpoint",
    ":UIProcessServerEndpoint",
    ":WebContentClientEndpoint",
    ":WebContentServerEndpoint",
    ":WebDriverClientEndpoint",
    ":WebDriverServerEndpoint",
    ":generate_native_stylesheet_source",
    "Plugins",
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibDatabase",
    "//Libraries/LibDevTools",
    "//Libraries/LibFileSystem",
    "//Libraries/LibGfx",
    "//Libraries/LibHTTP",
    "//Libraries/LibIPC",
    "//Libraries/LibImageDecoderClient",
    "//Libraries/LibJS",
    "//Libraries/LibRequests",
    "//Libraries/LibSyntax",
    "//Libraries/LibTextCodec",
    "//Libraries/LibURL",
    "//Libraries/LibUnicode",
    "//Libraries/LibWeb",
    "//Meta/gn/build/libs/sqlite3",
  ]
  sources = [
    "Application.cpp",
    "Attribute.cpp",
    "Autocomplete.cpp",
    "BrowserProcess.cpp",
    "ConsoleOutput.cpp",
    "CookieJar.cpp",
    "DOMNodeProperties.cpp",
    "HeadlessWebView.cpp",
    "HelperProcess.cpp",
    "Menu.cpp",
    "Mutation.cpp",
    "Process.cpp",
    "ProcessHandle.cpp",
    "ProcessManager.cpp",
    "SearchEngine.cpp",
    "Settings.cpp",
    "SiteIsolation.cpp",
    "SourceHighlighter.cpp",
    "StorageJar.cpp",
    "URL.cpp",
    "UserAgent.cpp",
    "Utilities.cpp",
    "ViewImplementation.cpp",
    "WebContentClient.cpp",
    "WebUI.cpp",
    "WebUI/ProcessesUI.cpp",
    "WebUI/SettingsUI.cpp",
  ]
  sources += get_target_outputs(":WebContentClientEndpoint") +
             get_target_outputs(":WebContentServerEndpoint") +
             get_target_outputs(":WebDriverClientEndpoint") +
             get_target_outputs(":WebDriverServerEndpoint") +
             get_target_outputs(":UIProcessClientEndpoint") +
             get_target_outputs(":UIProcessServerEndpoint") +
             get_target_outputs(":generate_native_stylesheet_source")
  explicit_symbol_export = true
}
