executable("RequestServer") {
  configs += [ "//UI:ladybird_config" ]
  include_dirs = [
    "//Libraries",
    "//Services",
  ]
  deps = [
    "//AK",
    "//Meta/gn/build/libs/curl",
    "//Libraries/LibCore",
    "//Libraries/LibCrypto",
    "//Libraries/LibFileSystem",
    "//Libraries/LibIPC",
    "//Libraries/LibMain",
    "//Libraries/LibRequests:RequestClientEndpoint",
    "//Libraries/LibRequests:RequestServerEndpoint",
    "//Libraries/LibTLS",
    "//Libraries/LibThreading",
    "//Libraries/LibURL",
    "//Libraries/LibWebSocket",
  ]
  sources = [
    "//Services/RequestServer/ConnectionFromClient.cpp",
    "main.cpp",
  ]
  output_dir = "$root_out_dir/libexec"
}
