executable("RequestServer") {
  configs += [ "//UI:ladybird_config" ]
  include_dirs = [
    "//Libraries",
    "//Services",
    # Include the gen dir because we transitively include export headers.
    "$target_gen_dir/..",
  ]
  deps = [
    "//AK",
    "//Meta/gn/build/libs/curl",
    "//Libraries/LibCore",
    "//Libraries/LibCrypto",
    "//Libraries/LibDNS",
    "//Libraries/LibHTTP",
    "//Libraries/LibIPC",
    "//Libraries/LibMain",
    "//Libraries/LibRequests",
    "//Libraries/LibTLS",
    "//Libraries/LibWebSocket",
    "//Libraries/LibURL",
    "//Libraries/LibTextCodec",
  ]
  sources = [
    "ConnectionFromClient.cpp",
    "CURL.cpp",
    "Request.cpp",
    "RequestPipe.cpp",
    "Resolver.cpp",
    "WebSocketImplCurl.cpp",
    "main.cpp",
  ]
  output_dir = "$root_out_dir/libexec"
}
