import("//Meta/gn/build/compiled_action.gni")
import("//Meta/gn/build/libs/pulse/enable.gni")

executable("WebContent") {
  configs += [ "//UI:ladybird_config" ]
  include_dirs = [
    "//UI",
    "//Services",
  ]
  deps = [
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibCrypto",
    "//Libraries/LibFileSystem",
    "//Libraries/LibGC",
    "//Libraries/LibGfx",
    "//Libraries/LibIPC",
    "//Libraries/LibImageDecoderClient",
    "//Libraries/LibJS",
    "//Libraries/LibMain",
    "//Libraries/LibMedia",
    "//Libraries/LibRequests",
    "//Libraries/LibURL",
    "//Libraries/LibWeb",
    "//Libraries/LibWebSocket",
    "//Libraries/LibWebView",
    "//Libraries/LibWebView:WebContentClientEndpoint",
    "//Libraries/LibWebView:WebContentServerEndpoint",
    "//Libraries/LibWebView:WebDriverClientEndpoint",
    "//Libraries/LibWebView:WebDriverServerEndpoint",
    "//Libraries/LibWebView:WebUIClientEndpoint",
    "//Libraries/LibWebView:WebUIServerEndpoint",
    "//Meta/gn/build/libs/fontconfig",
    "//Meta/gn/build/libs/pulse",
  ]
  sources = [
    "ConnectionFromClient.cpp",
    "ConnectionFromClient.h",
    "ConsoleGlobalEnvironmentExtensions.cpp",
    "ConsoleGlobalEnvironmentExtensions.h",
    "DevToolsConsoleClient.cpp",
    "DevToolsConsoleClient.h",
    "Forward.h",
    "PageClient.cpp",
    "PageClient.h",
    "PageHost.cpp",
    "PageHost.h",
    "WebContentConsoleClient.cpp",
    "WebContentConsoleClient.h",
    "WebDriverConnection.cpp",
    "WebDriverConnection.h",
    "WebUIConnection.cpp",
    "WebUIConnection.h",
    "main.cpp",
  ]

  output_dir = "$root_out_dir/libexec"
}
