import("//UI/link_qt.gni")

executable("WebDriver") {
  configs += [ "//UI:ladybird_config" ]
  include_dirs = [
    "//UI",
    "//Services",
  ]
  data_deps = [
    "//UI:headless-browser",
    "//UI:ladybird_executable",
  ]
  deps = [
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibFileSystem",
    "//Libraries/LibGfx",
    "//Libraries/LibIPC",
    "//Libraries/LibJS",
    "//Libraries/LibMain",
    "//Libraries/LibURL",
    "//Libraries/LibWeb",
    "//Libraries/LibWebSocket",
    "//Libraries/LibWebView:WebDriverClientEndpoint",
    "//Libraries/LibWebView:WebDriverServerEndpoint",
  ]
  sources = [
    "//Services/WebDriver/Client.cpp",
    "//Services/WebDriver/Session.cpp",
    "//Services/WebDriver/WebContentConnection.cpp",
    "main.cpp",
  ]
}
