executable("WebWorker") {
  configs += [ "//UI:ladybird_config" ]
  include_dirs = [
    "//Libraries",
    "//Services",
  ]
  deps = [
    "//AK",
    "//Meta/gn/build/libs/fontconfig",
    "//Libraries/LibCore",
    "//Libraries/LibFileSystem",
    "//Libraries/LibGfx",
    "//Libraries/LibIPC",
    "//Libraries/LibImageDecoderClient",
    "//Libraries/LibJS",
    "//Libraries/LibMain",
    "//Libraries/LibRequests",
    "//Libraries/LibURL",
    "//Libraries/LibWeb",
    "//Libraries/LibWeb:WebWorkerClientEndpoint",
    "//Libraries/LibWeb:WebWorkerServerEndpoint",
    "//Libraries/LibWebView",
  ]
  sources = [
    "//Services/WebWorker/ConnectionFromClient.cpp",
    "//Services/WebWorker/PageHost.cpp",
    "//Services/WebWorker/WorkerHost.cpp",
    "main.cpp",
  ]
  output_dir = "$root_out_dir/libexec"
}
