import("//Tests/unittest.gni")

unittest("test-js") {
  use_js_main = true
  include_dirs = [ "//Libraries" ]
  sources = [ "test-js.cpp" ]
  deps = [
    "//Libraries/LibFileSystem",
    "//Libraries/LibJS",
  ]
}

executable("test262-runner") {
  sources = [ "test262-runner.cpp" ]
  include_dirs = [ "//Libraries" ]
  deps = [
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibJS",
  ]
}

group("LibJS") {
  testonly = true
  deps = [
    ":test-js",
    ":test262-runner",
  ]
}
