import("//Tests/unittest.gni")

unittest("test-js") {
  use_js_main = true
  include_dirs = [ "//Libraries" ]
  sources = [ "test-js.cpp" ]
  deps = [
    "//Libraries/LibFileSystem",
    "//Libraries/LibGC",
    "//Libraries/LibJS",
  ]
}

group("LibJS") {
  testonly = true
  deps = [
    ":test-js",
  ]
}
