import("//Tests/unittest.gni")

unittest("TestCSSIDSpeed") {
  include_dirs = [ "//Libraries" ]
  sources = [ "TestCSSIDSpeed.cpp" ]
  deps = [ "//Libraries/LibWeb" ]
}

unittest("TestCSSPixels") {
  include_dirs = [ "//Libraries" ]
  sources = [ "TestCSSPixels.cpp" ]
  deps = [ "//Libraries/LibWeb" ]
}

unittest("TestFetchInfrastructure") {
  include_dirs = [ "//Libraries" ]
  sources = [ "TestFetchInfrastructure.cpp" ]
  deps = [ "//Libraries/LibWeb" ]
}

unittest("TestFetchURL") {
  include_dirs = [ "//Libraries" ]
  sources = [ "TestFetchURL.cpp" ]
  deps = [
    "//Libraries/LibURL",
    "//Libraries/LibWeb",
  ]
}

unittest("TestHTMLTokenizer") {
  include_dirs = [ "//Libraries" ]
  sources = [ "TestHTMLTokenizer.cpp" ]
  deps = [ "//Libraries/LibWeb" ]
}

unittest("TestMicrosyntax") {
  include_dirs = [ "//Libraries" ]
  sources = [ "TestMicrosyntax.cpp" ]
  deps = [ "//Libraries/LibWeb" ]
}

unittest("TestMimeSniff") {
  include_dirs = [ "//Libraries" ]
  sources = [ "TestMimeSniff.cpp" ]
  deps = [ "//Libraries/LibWeb" ]
}

unittest("TestNumbers") {
  include_dirs = [ "//Libraries" ]
  sources = [ "TestNumbers.cpp" ]
  deps = [ "//Libraries/LibWeb" ]
}

group("LibWeb") {
  testonly = true
  deps = [
    ":TestCSSIDSpeed",
    ":TestCSSPixels",
    ":TestFetchInfrastructure",
    ":TestFetchURL",
    ":TestHTMLTokenizer",
    ":TestMicrosyntax",
    ":TestMimeSniff",
    ":TestNumbers",
  ]
}
