executable("ImageDecoder") {
  configs += [ "//UI:ladybird_config" ]
  include_dirs = [
    "//Libraries",
    "//Services",
  ]
  deps = [
    "//AK",
    "//Libraries/LibCore",
    "//Libraries/LibGfx",
    "//Libraries/LibIPC",
    "//Libraries/LibImageDecoderClient",
    "//Libraries/LibMain",
    "//Libraries/LibThreading",
  ]
  sources = [
    "//Services/ImageDecoder/ConnectionFromClient.cpp",
    "main.cpp",
  ]
  output_dir = "$root_out_dir/libexec"
}
